--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </section>
 
-        <section class="popular">
+        <!--<section class="popular">
             <div class="popular-title">
             <h2>Most Popular</h2>
             </div>
@@ -296,7 +296,7 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
-    </footer>
+    </footer> -->
 
     </body>
 </html>
