--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             </div>
         </section>
 
-        <!--<section class="popular">
+        <section class="popular">
             <div class="popular-title">
             <h2>Most Popular</h2>
             </div>
@@ -218,7 +218,7 @@
             </div>
 
 
-            <section class="activities" id="activities">
+        <!--<section class="activities" id="activities">
                 <div class="activities-title">
                 <h2>Activities in Marseille</h2>
                 </div>
