first activity card working

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
 
 
-        <!--<section class="activities" id="activities">
+        <section class="activities" id="activities">
                 <div class="activities-title">
                 <h2>Activities in Marseille</h2>
                 </div>
@@ -233,7 +233,7 @@
                     </div>
                 </a>
 
-                <div class="acc-2-cards">
+                <!--<div class="acc-2-cards">
                 <a href="#">
                     <div class="act-card-2">
                             <img src="activities/image2.jpg" alt="Pomegues port" class="act-img-2">
