--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                     </div>
                 </a>
 
-                <!--<div class="acc-2-cards">
+                <div class="acc-2-cards">
                 <a href="#">
                     <div class="act-card-2">
                             <img src="activities/image2.jpg" alt="Pomegues port" class="act-img-2">
@@ -296,7 +296,7 @@
           <li><a href="#">Contact Us</a></li>
         </ul>
       </div>
-    </footer> -->
+    </footer>
 
     </body>
 </html>
