--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Booki</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
+    <link rel="stylesheet" type="text/css" href="styles.css?version=51" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -50,19 +50,19 @@
         <h2 class="filters-h">Filters</h2>
       </div>
       <div class="filter-1">
-        <i class="fas fa-money-bill-wave" style="color: blue"></i>
+        <i class="fas fa-money-bill-wave"></i>
         <a href="#" class="cost">Low cost</a>
       </div>
       <div class="filter-2">
-        <i class="fas fa-child" style="color: blue"></i>
+        <i class="fas fa-child"></i>
         <a href="#" class="family">Family friendly</a>
       </div>
       <div class="filter-3">
-        <i class="fas fa-heart" style="color: blue"></i>
+        <i class="fas fa-heart"></i>
         <a href="#" class="romantic">Romantic</a>
       </div>
       <div class="filter-4">
-        <i class="fas fa-dog" style="color: blue"></i>
+        <i class="fas fa-dog"></i>
         <a href="#" class="pets">Pets allowed</a>
       </div>
       <div class="info">
